--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -1,15 +1,12 @@
 {%extends 'portfolio/base.html'%}
-<<<<<<< HEAD
+
 {%load static%}
 {%block title%}My_blog{%endblock%}
 <style>
 
 </style>
-=======
 
-{%block title%}My_blog{%endblock%}
 
->>>>>>> origin/main
 {%block menu%}
     <li><a href="{% url 'portfolio' %}" style="color: orange;">Intro</a></li>
     <li><a href="{%url 'categori' 'new'%}" >New</a></li>
@@ -27,7 +24,6 @@
             {{ message }}
         {% endfor %}
     {% endif %}
-<<<<<<< HEAD
             <div class="column lg-12" data-animate-block>
 
                         <h2 class="text-pretitle" data-animate-el>
@@ -80,12 +76,11 @@
 
                             <div id="modal-0{{ forloop.counter }}" hidden>
                                 <div class="modal-popup">
-
                                     <div class="modal-popup__desc">
                                         <br><br><br>
                                         <h5>{{ i.title }}</h5>
                                         <p>{{ i.description }}</p>
-
+                                        <p>{{i.views}} view{{views|pluralize}}</p>
                                     </div>
 
                                     <a href="{%url 'detail' i.id %}" class="modal-popup__details">Read</a>
@@ -94,62 +89,6 @@
                         {%endfor%}
 
 
-=======
-    <div class="column lg-12" data-animate-block>
-        <h2 class="text-pretitle" data-animate-el>
-           New Blogs
-        </h2>
-        <p class="h2" data-animate-el>
-            Sometimes I add something new but it's doesn't exact)
-        </p>
-        <ul class="folio-list row block-lg-one-half block-stack-on-1000">
-           {% for blog in object_list %}
-            {%if blog.is_published%}
-               <li class="folio-list__item column" data-animate-el>
-                   <a class="folio-list__item-link" href="#modal-0{{ forloop.counter }}">
-                       <div class="folio-list__item-text">
-                          <div class="folio-list__item-cat">
-                              {{blog.data}}
-                          </div>
-                          <div class="folio-list__item-title">
-                              {{blog.title}}
-                          </div>
-                       </div>
-                   </a>
-                   <a class="folio-list__proj-link" href="#" title="project link">
-                      <svg width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M8.14645 3.14645C8.34171 2.95118 8.65829 2.95118 8.85355 3.14645L12.8536 7.14645C13.0488 7.34171 13.0488 7.65829 12.8536 7.85355L8.85355 11.8536C8.65829 12.0488 8.34171 12.0488 8.14645 11.8536C7.95118 11.6583 7.95118 11.3417 8.14645 11.1464L11.2929 8H2.5C2.22386 8 2 7.77614 2 7.5C2 7.22386 2.22386 7 2.5 7H11.2929L8.14645 3.85355C7.95118 3.65829 7.95118 3.34171 8.14645 3.14645Z" fill="currentColor" fill-rule="evenodd" clip-rule="evenodd"></path></svg>
-                   </a>
-               </li>
-           <div id="modal-0{{ forloop.counter }}" hidden>
-                          <!--модал виндовс -->
-               <div class="modal-popup">
-                      <div class="modal-popup__desc">
-                          <br><br><br>
-                          <h5>{{blog.title}}</h5>
-                          <p> {{blog.description}}<a href="{% url 'detail' blog.id%}" style="color: orange;">...</a></p>
-                      </div>
-                   <a href="{% url 'detail' blog.id%}" class="modal-popup__details">Click</a>
-               </div>
-           </div> <!-- end modal -->
-          {%endif%}
-        {%endfor%}
-
-        </ul> <!-- end folio-list -->
-             {% if is_paginated %}
-                 <div class="pagination" style="text-align:center">
-
-                     <a
-                         href="{%if page_obj.has_previous%} {% url 'paginator' page_obj.previous_page_number %}{% else %}#{%endif%}">
-                     «</a>
-                     {% for page in page_obj.paginator.page_range%}
-                          <a class="page-link" href="{%url 'paginator' page %}">{{page}}</a>
-                      {%endfor%}
-
-                      <a href="{%if page_obj.has_next%} {% url 'paginator' page_obj.next_page_number %}{% else %}#{%endif%}">»</a>
-                </div>
-            {%endif%}
-    </div>
->>>>>>> origin/main
 {%endblock%}
 
 {%block footer%}
@@ -162,12 +101,8 @@
                         </h2>
 
                         <p class="h1">
-<<<<<<< HEAD
                             I enjoy receiving messages from you. If you have any suggestions, I'll be here waiting for you.
-=======
-                            I love to hear from you.
-                            If you want suggest i will wait for you)
->>>>>>> origin/main
+
                         </p>
                         <br><br>
                       <div class="column-center ">
