--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -13,11 +13,11 @@
 
 {%block context%}
 
-                    <div class="column-center">
-                        <h3 class="text-title" style="text-align:center ">
+                    <div class="column-center" style=>
+                        <h3 class="text-title" style="text-align:center">
                             <br>{{object.title}}
                         </h3>
-                        <p class="text-title" style="margin-left:5%;margin-right:5%;text-align:justify">{{object.arrticle|safe}}</p>
+                        <p class="text-title" style="margin-left:15%;margin-right:15%;text-align:justify">{{object.arrticle|safe}}</p>
                     </div>
 
 {%endblock%}
