--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,13 +1,10 @@
-
-/* ===================================================================
- * # SETTINGS
- *
- *
- * ------------------------------------------------------------------- */
-
-/* ------------------------------------------------------------------- 
- * ## fonts 
- * ------------------------------------------------------------------- */
+.form-popup{
+    display:none;
+    }
+ .form-popup input{
+    width:100%;
+    text-align:center;
+    }
 @import url("https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=DM+Serif+Text:ital@0;1&family=Public+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap");
 
 :root {
@@ -4151,3 +4148,4 @@ img.u-pull-left {
         right : 6vw;
     }
 }
+
