--- a/portfolio/templates/portfolio/base.html
+++ b/portfolio/templates/portfolio/base.html
@@ -246,12 +246,12 @@
 
             </section> <!-- end s-about -->
 
-{%endblock%}
+
             <!-- ### works
             ================================================== -->
             <section id="works" class="s-works target-section">
                 <div class="row works-portfolio">
-                {%block blogs%}
+
                     <div class="column lg-12" data-animate-block>
                         <h2 class="text-pretitle" data-animate-el>
                             {% trans "Recent Works" %}
@@ -308,96 +308,19 @@
                     </div>
                   {%endfor%}
 
-                    {% endblock %}
                 </div>
             </section>
-
-            {% block footer %}
-            <!-- ### contact
-            ================================================== -->
-
-            <section id="contact" class="s-contact target-section">
-
-                <div class="row contact-top">
-                    <div class="column lg-12">
-                        <h2 class="text-pretitle">
-                            {% trans "Get In Touch" %}
-                        </h2>
-
-                        <p class="h1">
-                            {% blocktrans %}
-                            If you need a website or want to hire me, feel free to reach out!
-                            {% endblocktrans %}
-                        </p>
-                    </div>
-                </div>
-
-                <div class="row contact-bottom">
-                    <div class="column lg-13 md-5 tab-6 stack-on-550 contact-block">
-                        <h3 class="text-pretitle">
-                            {% trans "Reach me at" %}
-                        </h3>
-                        <p class="contact-links">
-                            <a href="mailto:danya.tkachenko.1997@gmail.com" class="mailtoui">danya.tkachenko.1997@gmail.com</a> <br>
-                            <a href="tel:+1975432345">+380968372100</a>
-                        </p>
-                    </div>
-                    <div class="column lg-4 md- tab-6 stack-on-550 contact-block">
-                        <h3 class="text-pretitle">Social</h3>
-                        <ul class="contact-social">
-
-                            <li><a href="https://www.linkedin.com/in/daniil-tkachenko-459b82233/">Linkedin</a></li>
-                            <li><a href="https://github.com/Lap0chka">GitHub</a></li>
-                        </ul>
-                    </div>
-                    <div class="column lg-4 md-12 contact-block">
-                        <a href="mailto:danya.tkachenko.1997@gmail.com" class="mailtoui btn btn--medium u-fullwidth contact-btn">Say Hello</a>
-                    </div>
-                    {% get_current_language as LANGUAGE_CODE %}
-                    {% get_available_languages as LANGUAGES %}
-                    {% get_language_info_list for LANGUAGES as languages %}
-                    <div class="column lg-6 md- tab-6 stack-on-550 contact-block">
-                        <p class="text-pretitle">{% trans "Site Language" %}</p>
-                        <ul class="contact-social">
-                            {% for language in languages %}
-                            <li>
-                                <a href="/{{ language.code }}/"
-                                   {% if language.code == LANGUAGE_CODE %} class="selected" {% endif %}>
-                                    {{ language.name_translated }}
-                                </a>
-                            </li>
-                            {% endfor %}
-                        </ul>
-                    </div>
-                </div> <!-- end contact-bottom -->
-
-            </section> <!-- end contact -->
-
-        </main> <!-- end s-content -->
-
-        <!-- ## footer
-        ================================================== -->
-        <footer class="s-footer">
-            <div class="row">
-                <div class="column ss-copyright">
-                    <span>©2025 Tkachenko Daniil</span>
-                </div>
-                <div class="ss-go-top">
-                    <a class="smoothscroll" title="Back to Top" href="#top">
-                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill-rule="evenodd" clip-rule="evenodd"><path d="M11 2.206l-6.235 7.528-.765-.645 7.521-9 7.479 9-.764.646-6.236-7.53v21.884h-1v-21.883z"/></svg>
-                    </a>
-                </div>
-            </div>
-
-        </footer> <!-- end s-footer -->
-
-    </div> <!-- end -s-pagewrap -->
-
 {%endblock%}
+
+
+            {% include 'portfolio/includes/footer.html' %}
+
     <!-- Java Script
     ================================================== -->
     <script src="{%static 'js/plugins.js'%}"></script>
     <script src="{%static 'js/main.js'%}"></script>
+            <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+            <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
 </body>
 </html>
