--- a/portfolio/templates/portfolio/includes/footer.html
+++ b/portfolio/templates/portfolio/includes/footer.html
@@ -33,8 +33,9 @@
             </ul>
         </div>
         <div class="column lg-4 md-12 contact-block">
-            <a href="mailto:danya.tkachenko.1997@gmail.com" class="mailtoui btn btn--medium u-fullwidth contact-btn">Say
-                Hello</a>
+            <a href="mailto:danya.tkachenko.1997@gmail.com" class="mailtoui btn btn--medium u-fullwidth contact-btn">
+                {% trans "SayHello" %}
+            </a>
         </div>
         {% get_current_language as LANGUAGE_CODE %}
         {% get_available_languages as LANGUAGES %}
@@ -56,8 +57,6 @@
 
 </section> <!-- end contact -->
 
-</main> <!-- end s-content -->
-
 <!-- ## footer
 ================================================== -->
 <footer class="s-footer">
@@ -75,5 +74,3 @@
     </div>
 
 </footer> <!-- end s-footer -->
-
-</div> <!-- end -s-pagewrap -->
