--- a/portfolio/templates/portfolio/includes/messages.html
+++ b/portfolio/templates/portfolio/includes/messages.html
@@ -6,7 +6,7 @@
     </button>
     <strong>
         {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}
-        ERROR: {{ message }}
+         {{ message }}
     </strong>
     {% else %}
     {{ message }}
