--- a/blog/templates/blog/posts.html
+++ b/blog/templates/blog/posts.html
@@ -1,4 +1,4 @@
-{%extends 'portfolio/base.html'%}
+{%extends 'base.html'%}
 {%load static%}
 {% load i18n %}
 {%block title%}My_blog{%endblock%}
@@ -44,7 +44,7 @@
 
           <div class="column lg-12" data-animate-block>
                         <h2 class="text-pretitle" data-animate-el>
-                            {% include 'portfolio/includes/messages.html' %}
+                            {% include 'includes/messages.html' %}
                             {% trans "Articles" %}
                         </h2>
                         <p class="h1" data-animate-el>
