--- a/my_portfolio/templates/base.html
+++ b/my_portfolio/templates/base.html
@@ -49,7 +49,9 @@
         ==================================================- -->
 
 {%endblock%}
+{% block footer %}
 {% include 'includes/footer.html' %}
+{% endblock %}
 
 
     <!-- Java Script
